# otus-cpp

./: CMakeLists.txt  additional_func.h  allocator.h  filters.cpp  filters.h  ip_print.h  limited_allocator.h  main.cpp  test_version.cpp
.github/workflows/: release.yml
tests/: tests.cpp
